syntax = "proto3";

package todo_grpc;


service ToDoCmd {
    rpc Select (ToDoRequest) returns (ToDoResponse){}
}

message ToDoRequest {
    string UserID = 1;
    string Content = 2;
    uint64 ToDoID = 3;
}

message ToDoResult {
    uint64 ID = 1;
    string Name = 2;
    string CreateTime = 3;
    string FinishTime = 4;
    bool   Active = 5;
}


message ToDoResponse {
    repeated ToDoResult Result = 1;
}
